--- a/app/view/assets/desktop_navbar.css
+++ b/app/view/assets/desktop_navbar.css
@@ -21,15 +21,14 @@
 	justify-content: space-between;
 
 	margin-right: 16px;
-
-	max-width: 110px;
-	/* width: 160px; */
 }
 #desktop-navbar-icons > button {
 	height: 46px;
 }
 #desktop-navbar-icons > button:not(:first-child) {
 	margin-left: 6px;
+	
+	width: 46px;
 }
 #desktop-navbar-icons > button:not(:last-child) {
 	margin-right: 6px;
